# termux-gps-tracker

./: Makefile  README.md  main.py  pyproject.toml  transfer.py
